add loader view

--- a/niffler-frontend/public/styles/index.css
+++ b/niffler-frontend/public/styles/index.css
@@ -10,6 +10,7 @@
 @import url("./components/editable-value.css");
 @import url("./components/form.css");
 @import url("./components/form-input.css");
+@import url("./components/loader.css");
 @import url("./components/profile.css");
 @import url("./components/react-calendar.css");
 @import url("./components/select.css");
