--- a/niffler-frontend/public/styles/components/form-input.css
+++ b/niffler-frontend/public/styles/components/form-input.css
@@ -2,7 +2,7 @@
     font-family: "PTRootUIWeb";
     width: 100%;
     display: block;
-    margin-bottom: 20px;
+    margin: 5px 0;
     box-sizing: border-box;
     font-size: 14px;
     padding: 10px;
