--- a/niffler-frontend/public/styles/components/button.css
+++ b/niffler-frontend/public/styles/components/button.css
@@ -15,6 +15,7 @@
     background-color: white;
     color: black;
     font-weight: 700;
+    font-size: 15px;
 }
 
 .button_type_small {
@@ -29,8 +30,8 @@
 }
 
 .button-icon {
-    width: 20px;
-    height: 20px;
+    width: 30px;
+    height: 30px;
     border: none;
     background-size: contain;
     background-color: transparent;
@@ -50,4 +51,5 @@
 
 .button-icon_type_logout {
     background-image: url("./../../images/logout.svg");
+    margin-top: 7px;
 }
