--- a/niffler-frontend/public/styles/components/header.css
+++ b/niffler-frontend/public/styles/components/header.css
@@ -9,7 +9,7 @@
     align-items: center;
     justify-content: space-between;
     z-index: 3;
-    box-shadow: 0 0 5px 5px hsl(218deg 77% 7%);
+    box-shadow: 0 0 5px 5px #040E20;
 }
 
 .header__group {
