--- a/niffler-frontend/public/styles/components/react-calendar.css
+++ b/niffler-frontend/public/styles/components/react-calendar.css
@@ -1,3 +1,7 @@
+.calendar-wrapper {
+    margin-top: 15px;
+}
+
 .calendar-wrapper,
 .react-datepicker-wrapper,
 .react-datepicker__input-container {
