--- a/niffler-frontend/public/styles/components/form-input.css
+++ b/niffler-frontend/public/styles/components/form-input.css
@@ -2,6 +2,7 @@
     font-family: "PTRootUIWeb";
     width: 100%;
     display: block;
+    margin-top: 15px;
     margin-bottom: 20px;
     box-sizing: border-box;
     font-size: 14px;
