--- a/niffler-frontend/public/styles/index.css
+++ b/niffler-frontend/public/styles/index.css
@@ -14,6 +14,7 @@
 @import url("./components/profile.css");
 @import url("./components/react-calendar.css");
 @import url("./components/select.css");
+@import url("./components/spendings.css");
 @import url("./components/table.css");
 
 .main {
@@ -24,7 +25,8 @@
 }
 
 .main-content {
-    margin: 160px 20px 100px;
+    width: 100%;
+    margin: 160px 40px 100px;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     grid-gap: 35px;
@@ -32,14 +34,6 @@
     "add stats stats"
     "history history history";
 }
-
-.profile-content {
-    margin: 160px 20px 100px;
-    display: grid;
-    grid-template-columns: 1fr;
-
-}
-
 
 .value-form {
     display: flex;
@@ -87,37 +81,6 @@
 
 .main-content__section-history {
     grid-area: history;
-}
-
-.spendings__content {
-    margin: 10px;
-}
-
-.spendings__controls {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    margin: 20px;
-}
-
-.spendings__filters {
-    display: flex;
-    width: 100%;
-    align-items: center;
-    justify-content: space-between;
-}
-
-.spendings__buttons{
-    display: flex;
-    width: 100%;
-}
-
-.spendings__buttons button {
-    margin-right: 20px;
-}
-
-.spendings__img {
-    box-shadow: 0 0 10px 10px black;
 }
 
 .cite {
