--- a/niffler-frontend/public/styles/index.css
+++ b/niffler-frontend/public/styles/index.css
@@ -7,6 +7,7 @@
 /*other components styles*/
 @import url("./components/avatar.css");
 @import url("./components/button.css");
+@import url("./components/categories.css");
 @import url("./components/editable-value.css");
 @import url("./components/form.css");
 @import url("./components/form-input.css");
