--- a/niffler-frontend/public/styles/components/editable-value.css
+++ b/niffler-frontend/public/styles/components/editable-value.css
@@ -1,8 +1,11 @@
 .editable__input {
     font-family: "PTRootUIWeb";
+    text-align: center;
+    max-width: 100%;
+    width: fit-content;
     border: none;
     border-bottom: 2px solid black;
     background: transparent;
     display: block;
-    margin-top: 3px;
+    margin: 3px auto 0 ;
 }
