--- a/niffler-frontend/public/styles/components/table.css
+++ b/niffler-frontend/public/styles/components/table.css
@@ -23,7 +23,8 @@ tr {
 th,
 td {
     padding: 15px;
-    overflow: hidden;
+    overflow-y: visible;
+    overflow-x: clip;
     text-overflow: ellipsis;
     white-space: nowrap;
 }
@@ -44,6 +45,9 @@ td {
     padding-top: 10px;
     padding-bottom: 10px;
     color: black;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 tr:nth-child(even) td {
