--- a/niffler-frontend/public/styles/components/avatar.css
+++ b/niffler-frontend/public/styles/components/avatar.css
@@ -34,6 +34,11 @@
     margin-top: 30px;
 }
 
+.edit-avatar__error {
+    color: darkred;
+    font-size: 12px;
+}
+
 
 input[type=file]::file-selector-button {
     font-family: PTRootUIWeb;
