--- a/niffler-frontend/public/styles/components/avatar.css
+++ b/niffler-frontend/public/styles/components/avatar.css
@@ -39,6 +39,10 @@
     font-size: 12px;
 }
 
+.edit-avatar__input {
+    width: inherit;
+    padding: 3px;
+}
 
 input[type=file]::file-selector-button {
     font-family: PTRootUIWeb;
@@ -51,7 +55,6 @@ input[type=file]::file-selector-button {
 }
 
 input[type=file]::file-selector-button:hover {
-    background-color: saddlebrown;
-    border: 2px solid white;
+    opacity: 0.8;
     cursor: pointer;
 }
