--- a/niffler-frontend/public/styles/components/profile.css
+++ b/niffler-frontend/public/styles/components/profile.css
@@ -8,7 +8,8 @@
 .profile__avatar-edit {
     border: none;
     background: transparent;
-    margin-top: 13px;
+    margin: 0;
+    padding: 0;
 }
 
 .profile__avatar-edit:hover {
@@ -16,8 +17,11 @@
 }
 
 .profile__avatar {
-    margin: 10px;
     object-fit: cover;
+    width: 200px;
+    height: 200px;
+    margin: 0;
+    padding: 0;
 }
 
 .profile__info-container {
