--- a/niffler-frontend/public/styles/components/avatar.css
+++ b/niffler-frontend/public/styles/components/avatar.css
@@ -6,15 +6,14 @@
 
 .edit-avatar__container {
     position: relative;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
     margin: 10px;
     box-shadow: 0 0 5px 5px black;
     width: 200px;
     height: 200px;
     z-index: 1;
-}
-
-.edit-avatar__header {
-    margin-bottom: 30px;
 }
 
 .edit-avatar__form {
