--- a/niffler-frontend/public/styles/components/header.css
+++ b/niffler-frontend/public/styles/components/header.css
@@ -26,7 +26,7 @@
 
 .header__navigation ul{
     width: 100%;
-    max-width: 260px;
+    max-width: 360px;
     padding: 0;
     margin: 0;
     display: flex;
@@ -57,6 +57,10 @@
     margin: 10px;
     object-fit: cover;
     box-shadow: 0 0 3px 3px black;
+}
+
+.header__people {
+    margin: 10px;
 }
 
 .header__username {
