--- a/niffler-frontend/public/styles/index.css
+++ b/niffler-frontend/public/styles/index.css
@@ -12,11 +12,14 @@
 @import url("./components/form.css");
 @import url("./components/form-input.css");
 @import url("./components/loader.css");
+@import url("./components/people.css");
 @import url("./components/profile.css");
 @import url("./components/react-calendar.css");
 @import url("./components/select.css");
 @import url("./components/spendings.css");
 @import url("./components/table.css");
+@import url("./components/spendings-table.css");
+@import url("./components/people-table.css");
 
 .main {
     display: flex;
