--- a/niffler-auth/src/main/resources/static/styles/styles.css
+++ b/niffler-auth/src/main/resources/static/styles/styles.css
@@ -77,7 +77,7 @@ body {
     border-radius: 3px;
     font-weight: normal;
     opacity: 0.5;
-    background-color: white;
+    background-color: #eeedea;
     color: black;
     text-transform: none;
 }
@@ -114,7 +114,7 @@ body {
     border-radius: 3px;
     border: 2px solid black;
     opacity: 0.6;
-    background-color: white;
+    background-color: #eeedea;
     color: black;
     font-weight: 700;
 }
