--- a/niffler-frontend/public/styles/components/avatar.css
+++ b/niffler-frontend/public/styles/components/avatar.css
@@ -44,16 +44,15 @@
 }
 
 input[type=file]::file-selector-button {
-    font-family: PTRootUIWeb;
+    font-family: "PTRootUIWeb", var(--font-fallback);
     border: 2px solid black;
-    opacity: 0.5;
     padding: .2em .4em;
     border-radius: 3px;
-    background-color: white;
+    background-color: #eeedea;
     transition: 1s;
 }
 
 input[type=file]::file-selector-button:hover {
-    opacity: 0.8;
+    opacity: 0.7;
     cursor: pointer;
 }
