--- a/niffler-frontend/public/styles/components/button.css
+++ b/niffler-frontend/public/styles/components/button.css
@@ -9,8 +9,7 @@
     margin-top: 15px;
     border-radius: 3px;
     border: 2px solid black;
-    opacity: 0.6;
-    background-color: white;
+    background-color: #eeedea;
     color: black;
     font-weight: 700;
     font-size: 15px;
@@ -23,13 +22,13 @@
 
 .button:hover {
     cursor: pointer;
-    opacity: 0.8;
+    opacity: 0.7;
 }
 
 .button:disabled,
 .button:disabled:hover{
     cursor: not-allowed;
-    opacity: 0.2;
+    opacity: 0.3;
 }
 
 .button-icon {
