--- a/niffler-frontend/public/styles/components/form-input.css
+++ b/niffler-frontend/public/styles/components/form-input.css
@@ -9,12 +9,15 @@
     border: 2px solid black;
     border-radius: 3px;
     font-weight: normal;
-    opacity: 0.5;
-    background-color: white;
+    background-color: #eeedea;
     color: black;
 }
 
 .form__input::placeholder {
     text-align: center;
     font-weight: 700;
+}
+
+.form__input-error {
+    border: 2px solid darkred;
 }
