--- a/niffler-frontend/public/styles/components/people.css
+++ b/niffler-frontend/public/styles/components/people.css
@@ -3,3 +3,9 @@
     width: 80%;
     display: flex;
 }
+
+.people__user-avatar {
+    border-radius: 50%;
+    object-fit: cover;
+    border: 2px solid white;
+}
