--- a/niffler-frontend/public/styles/components/absract-table.css
+++ b/niffler-frontend/public/styles/components/absract-table.css
@@ -1,7 +1,11 @@
-.people-table {
+.abstract-table {
     grid-template-columns:
-    minmax(50px, 0.2fr)
+    minmax(100px, 0.5fr)
     minmax(100px, 0.7fr)
     minmax(120px, 0.9fr)
     minmax(100px, 0.7fr)
+}
+
+.abstract-table__buttons .button-icon{
+    margin: 10px;
 }
