--- a/niffler-frontend/public/styles/index.css
+++ b/niffler-frontend/public/styles/index.css
@@ -5,6 +5,7 @@
 @import url("./components/footer.css");
 @import url("./components/main-page.css");
 /*other components styles*/
+@import url("./components/absract-table.css");
 @import url("./components/avatar.css");
 @import url("./components/button.css");
 @import url("./components/categories.css");
@@ -14,12 +15,14 @@
 @import url("./components/loader.css");
 @import url("./components/people.css");
 @import url("./components/profile.css");
+@import url("./components/popup.css");
 @import url("./components/react-calendar.css");
 @import url("./components/select.css");
 @import url("./components/spendings.css");
 @import url("./components/table.css");
+@import url("./components/tooltip.css");
 @import url("./components/spendings-table.css");
-@import url("./components/people-table.css");
+
 
 .main {
     display: flex;
