--- a/niffler-auth/src/main/resources/static/styles/styles.css
+++ b/niffler-auth/src/main/resources/static/styles/styles.css
@@ -125,7 +125,7 @@ body {
 }
 
 .form__error {
-    color: darkred;
+    color: #a10b0b;
     font-size: 14px;
     margin-bottom: 10px;
     font-weight: 700;
