--- a/niffler-frontend/public/styles/components/global.css
+++ b/niffler-frontend/public/styles/components/global.css
@@ -10,6 +10,7 @@
     --font-fallback: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
+    --color-error: #a10b0b;
 }
 
 body {
