--- a/niffler-auth/src/main/resources/static/styles/styles.css
+++ b/niffler-auth/src/main/resources/static/styles/styles.css
@@ -76,7 +76,6 @@ body {
     border: 2px solid black;
     border-radius: 8px;
     font-weight: normal;
-    opacity: 0.5;
     background-color: #eeedea;
     color: black;
     text-transform: none;
@@ -104,6 +103,9 @@ body {
 }
 
 .form__submit {
+    font-family: "PTRootUIWeb", -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+    sans-serif;
     display: block;
     box-sizing: border-box;
     max-width: 350px;
@@ -113,7 +115,6 @@ body {
     margin-top: 15px;
     border-radius: 8px;
     border: 2px solid black;
-    opacity: 0.6;
     background-color: #eeedea;
     color: black;
     font-weight: 700;
