--- a/niffler-frontend/public/styles/components/header.css
+++ b/niffler-frontend/public/styles/components/header.css
@@ -47,6 +47,7 @@
     color: black;
     display: flex;
     align-items: center;
+    position: relative;
 }
 
 .header__link:hover {
@@ -62,6 +63,17 @@
 
 .header__people {
     margin: 10px;
+}
+
+.header__sign {
+    position: absolute;
+    right: 0;
+    top: 10px;
+    width: 10px;
+    height: 10px;
+    display: block;
+    border-radius: 50%;
+    background-color: var(--color-main);
 }
 
 .header__username {
