--- a/niffler-auth/src/main/resources/templates/login.html
+++ b/niffler-auth/src/main/resources/templates/login.html
@@ -1,5 +1,5 @@
 <!DOCTYPE HTML>
-<html xmlns:th="https://www.thymeleaf.org" xmlns="http://www.w3.org/1999/xhtml">
+<html xmlns:th="https://www.thymeleaf.org" xmlns="http://www.w3.org/1999/xhtml" lang="en">
 <head>
     <title>Login to Niffler</title>
     <link rel="icon" th:href="@{images/favicon.ico}"/>
