--- a/niffler-auth/src/main/resources/templates/login.html
+++ b/niffler-auth/src/main/resources/templates/login.html
@@ -28,7 +28,7 @@
                     <div th:if="${param.logout}">
                         <p class="text-warning">You have been logged out.</p>
                     </div>
-                    <label class="form__label">Username:
+                    <label class="form__label">Username
                         <input class="form__input"
                                type="text"
                                name="username"
@@ -36,7 +36,7 @@
                                autocomplete="false"
                                required/>
                     </label>
-                    <label class="form__label">Password:
+                    <label class="form__label">Password
                         <input class="form__input"
                                type="password"
                                name="password"
