--- a/niffler-auth/src/main/resources/static/styles/styles.css
+++ b/niffler-auth/src/main/resources/static/styles/styles.css
@@ -224,4 +224,39 @@ body {
   border: 1px solid var(--color-grey);
 }
 
+@media screen and (max-width: 900px) {
+  .content {
+    display: flex;
+  }
+
+  .content__wrapper {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    overflow: auto;
+  }
+
+  .main__hero {
+    display: none;
+  }
+
+  .logo-section {
+    justify-content: center;
+    margin: 0;
+  }
+
+  .header {
+    align-self: center;
+  }
+
+  .header__additional {
+    align-self: center;
+  }
+
+  .form__paragraph_success {
+    margin-top: 20px;
+  }
+}
+
 
