log session id & cookies (#142)
* log session id & cookies

--- a/niffler-auth/src/main/resources/templates/error.html
+++ b/niffler-auth/src/main/resources/templates/error.html
@@ -30,6 +30,13 @@
                         Let`s start from the <a class="form__link" th:href="@{|${frontUri}|}">Niffler main page</a>
                     </p>
                 </div>
+                <div th:if="${sessionId} or ${not #lists.isEmpty(cookies)}" class="debug-info">
+                    <p class="header__additional">
+                    <div>DEBUG INFO: </div>
+                    <div th:text="'Session id = ' + ${sessionId}"></div>
+                    <li th:each="cookie : ${cookies}" th:text="${cookie}"></li>
+                    </p>
+                </div>
             </div>
         </section>
     </div>
