--- a/niffler-auth/src/main/resources/templates/login.html
+++ b/niffler-auth/src/main/resources/templates/login.html
@@ -21,7 +21,7 @@
                 </p>
             </div>
             <div class="form-section">
-                <form class="form" action="#" th:action="@{/login}" method="post">
+                <form class="form" id="login-form" action="#" th:action="@{/login}" method="post">
                     <h1 class="header">Log in</h1>
                     <div th:if="${param.error}" class="form__error-container">
                         <p class="form__error">[[${session.SPRING_SECURITY_LAST_EXCEPTION.message}]]</p>
@@ -46,8 +46,9 @@
                                required/>
                         <button type="button" class="form__password-button"></button>
                     </label>
-                    <button class="form__submit" type="submit">
-                        Log in
+                    <button class="form__submit" id="login-button" type="submit">
+                        <span class="button-text">Log in</span>
+                        <span class="loader hidden"></span>
                     </button>
                     <span class="divider"></span>
                     <a class="form__register" th:href="@{/register}" href="/register">Create new account</a>
@@ -74,6 +75,35 @@
     }
 
     passwordButton.addEventListener("click", handlePasswordButtonClick);
+
+    document.addEventListener("DOMContentLoaded", function () {
+        const loginForm = document.getElementById("login-form");
+        const loginButton = document.getElementById("login-button");
+        const buttonText = loginButton.querySelector(".button-text");
+        const loader = loginButton.querySelector(".loader");
+
+        loginForm.addEventListener("submit", function () {
+            loginButton.classList.add("disabled");
+            buttonText.textContent = "Logging in...";
+            loader.classList.remove("hidden");
+        });
+    });
+
+    document.addEventListener("DOMContentLoaded", function () {
+        const hero = document.querySelector(".main__hero");
+
+        const highResImage = new Image();
+        highResImage.src = "./../images/forest.svg";
+
+        highResImage.onload = function () {
+            hero.style.setProperty("--new-bg", `url('${highResImage.src}')`);
+            hero.classList.add("show-high-res");
+            setTimeout(() => {
+                hero.classList.add("hide-low-res");
+            }, 1000);
+        };
+    });
+
 </script>
 </body>
 </html>
