Some UI fixes (#154)
1) Removed scrolls from /login, /register pages
2) Added loader on "Login", "Sign up", "Register" buttons
3) Added low-quality background image to auth, added background color for forest.svg
4) Show cookies and sessionid on /error page only if DEBUG logging enabled
5) Added session check on root "/" address in auth, redirect to front in case that session is valid
6) Added image format validation to front
7) Added calendar validation, fix bug with loader on save button

--- a/niffler-auth/src/main/resources/templates/login.html
+++ b/niffler-auth/src/main/resources/templates/login.html
@@ -21,7 +21,7 @@
                 </p>
             </div>
             <div class="form-section">
-                <form class="form" action="#" th:action="@{/login}" method="post">
+                <form class="form" id="login-form" action="#" th:action="@{/login}" method="post">
                     <h1 class="header">Log in</h1>
                     <div th:if="${param.error}" class="form__error-container">
                         <p class="form__error">[[${session.SPRING_SECURITY_LAST_EXCEPTION.message}]]</p>
@@ -46,11 +46,14 @@
                                required/>
                         <button type="button" class="form__password-button"></button>
                     </label>
-                    <button class="form__submit" type="submit">
-                        Log in
+                    <button class="form__submit" id="login-button" type="submit">
+                        <span class="button-text">Log in</span>
+                        <span class="loader hidden"></span>
                     </button>
                     <span class="divider"></span>
-                    <a class="form__register" th:href="@{/register}" href="/register">Create new account</a>
+                    <a class="form__register" id="register-button" th:href="@{/register}" href="/register">Create new account
+                        <span class="loader hidden"></span>
+                    </a>
                 </form>
             </div>
         </section>
@@ -59,6 +62,12 @@
 <script>
     const passwordButton = document.querySelector(".form__password-button");
     const passwordInput = document.querySelector("[name=password]");
+    const loginForm = document.getElementById("login-form");
+    const loginButton = document.getElementById("login-button");
+    const registerButton = document.getElementById("register-button");
+    const loginButtonText = loginButton.querySelector(".button-text");
+    const loginLoader = loginButton.querySelector(".loader");
+    const registerLoader = registerButton.querySelector(".loader");
 
     const togglePasswordInputType = (inputType) => {
         return inputType === "password" ? "text" : "password";
@@ -74,6 +83,28 @@
     }
 
     passwordButton.addEventListener("click", handlePasswordButtonClick);
+
+    document.addEventListener("DOMContentLoaded", function () {
+        loginForm.addEventListener("submit", function () {
+            loginButton.classList.add("disabled");
+            loginButtonText.textContent = "Logging in...";
+            loginLoader.classList.remove("hidden");
+        });
+
+        registerButton.addEventListener("click", function () {
+            registerButton.classList.add("disabled");
+            registerLoader.classList.remove("hidden");
+        });
+    });
+
+    window.addEventListener("pageshow", (e) => {
+        loginButtonText.textContent = "Log in";
+
+        registerButton.classList.remove("disabled");
+        loginButton.classList.remove("disabled");
+        registerLoader.classList.add("hidden");
+        loginLoader.classList.add("hidden");
+    });
 </script>
 </body>
 </html>
