--- a/niffler-auth/src/main/resources/templates/register.html
+++ b/niffler-auth/src/main/resources/templates/register.html
@@ -50,8 +50,9 @@
                         <span class="form__error" th:if="${#fields.hasErrors('passwordSubmit')}"
                               th:errors="*{passwordSubmit}"></span>
                     </label>
-                    <button class="form__submit" type="submit">
-                        Sign Up
+                    <button class="form__submit" id="register-button" type="submit">
+                        <span class="button-text">Sign Up</span>
+                        <span class="loader hidden"></span>
                     </button>
                 </form>
                 <div class="form" th:unless="${username == null}">
@@ -90,6 +91,18 @@
     passwordButton.addEventListener("click", handlePasswordButtonClick);
     passwordSubmitButton.addEventListener("click", handleSubmitPasswordButtonClick);
 
+    document.addEventListener("DOMContentLoaded", function () {
+        const loginForm = document.getElementById("register-form");
+        const loginButton = document.getElementById("register-button");
+        const buttonText = loginButton.querySelector(".button-text");
+        const loader = loginButton.querySelector(".loader");
+
+        loginForm.addEventListener("submit", function () {
+            loginButton.classList.add("disabled");
+            buttonText.textContent = "Signing up...";
+            loader.classList.remove("hidden");
+        });
+    });
 </script>
 </body>
 </html>
