add ids to login form

--- a/niffler-auth/src/main/resources/templates/login.html
+++ b/niffler-auth/src/main/resources/templates/login.html
@@ -33,6 +33,7 @@
                         <input class="form__input"
                                type="text"
                                name="username"
+                               id="username"
                                placeholder="Type your username"
                                autocomplete="false"
                                required/>
@@ -41,6 +42,7 @@
                         <input class="form__input"
                                type="password"
                                name="password"
+                               id="password"
                                placeholder="Type your password"
                                autocomplete="false"
                                required/>
